--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -276,15 +276,15 @@ testbed/mockdatasenders/mockdatadogagentexporter/        @open-telemetry/collect
 # List of distribution maintainers for OpenTelemetry Collector Contrib
 #
 #####################################################
-reports/distributions/core.yaml     @open-telemetry/collector-contrib-approvers 
-reports/distributions/contrib.yaml  @open-telemetry/collector-contrib-approvers 
-reports/distributions/aws.yaml      @open-telemetry/collector-contrib-approvers 
-reports/distributions/grafana.yaml  @open-telemetry/collector-contrib-approvers 
-reports/distributions/observiq.yaml @open-telemetry/collector-contrib-approvers 
-reports/distributions/redhat.yaml   @open-telemetry/collector-contrib-approvers 
-reports/distributions/splunk.yaml   @open-telemetry/collector-contrib-approvers @atoulme @crobert-1 @dmitryax @hughesjj @jeffreyc-splunk @jinja2 @jvoravong @panotti @rmfitzpatrick @samiura
-reports/distributions/sumo.yaml     @open-telemetry/collector-contrib-approvers 
-reports/distributions/liatrio.yaml  @open-telemetry/collector-contrib-approvers 
+reports/distributions/core.yaml/     @open-telemetry/collector-contrib-approvers
+reports/distributions/contrib.yaml/  @open-telemetry/collector-contrib-approvers
+reports/distributions/aws.yaml/      @open-telemetry/collector-contrib-approvers
+reports/distributions/grafana.yaml/  @open-telemetry/collector-contrib-approvers
+reports/distributions/observiq.yaml/ @open-telemetry/collector-contrib-approvers
+reports/distributions/redhat.yaml/   @open-telemetry/collector-contrib-approvers
+reports/distributions/splunk.yaml/   @open-telemetry/collector-contrib-approvers @atoulme @crobert-1 @dmitryax @hughesjj @jeffreyc-splunk @jinja2 @jvoravong @panotti @rmfitzpatrick @samiura
+reports/distributions/sumo.yaml/     @open-telemetry/collector-contrib-approvers
+reports/distributions/liatrio.yaml/  @open-telemetry/collector-contrib-approvers
 
 
 ## UNMAINTAINED components
