--- a/receiver/sqlserverreceiver/internal/metadata/testdata/config.yaml
+++ b/receiver/sqlserverreceiver/internal/metadata/testdata/config.yaml
@@ -7,6 +7,8 @@ all_set:
       enabled: true
     sqlserver.batch.sql_recompilation.rate:
       enabled: true
+    sqlserver.database_io.read_latency:
+      enabled: true
     sqlserver.lock.wait.rate:
       enabled: true
     sqlserver.lock.wait_time.avg:
@@ -55,6 +57,8 @@ none_set:
     sqlserver.batch.sql_compilation.rate:
       enabled: false
     sqlserver.batch.sql_recompilation.rate:
+      enabled: false
+    sqlserver.database_io.read_latency:
       enabled: false
     sqlserver.lock.wait.rate:
       enabled: false
