--- a/receiver/sqlserverreceiver/metadata.yaml
+++ b/receiver/sqlserverreceiver/metadata.yaml
@@ -169,10 +169,10 @@ metrics:
       value_type: double
   sqlserver.database_io.read_latency:
     enabled: false
-    description: Total time, in milliseconds, that the users waited for reads.
-    unit: "ms"
+    description: Total time that the users waited for reads.
+    unit: "s"
     gauge:
-      value_type: int
+      value_type: double
     attributes: [physical_filename, logical_filename, file_type]
 
 tests:
