--- a/receiver/sqlserverreceiver/internal/metadata/testdata/config.yaml
+++ b/receiver/sqlserverreceiver/internal/metadata/testdata/config.yaml
@@ -7,7 +7,7 @@ all_set:
       enabled: true
     sqlserver.batch.sql_recompilation.rate:
       enabled: true
-    sqlserver.database_io.read_latency:
+    sqlserver.database.io.read_latency:
       enabled: true
     sqlserver.lock.wait.rate:
       enabled: true
@@ -58,7 +58,7 @@ none_set:
       enabled: false
     sqlserver.batch.sql_recompilation.rate:
       enabled: false
-    sqlserver.database_io.read_latency:
+    sqlserver.database.io.read_latency:
       enabled: false
     sqlserver.lock.wait.rate:
       enabled: false
