--- a/receiver/sqlserverreceiver/internal/metadata/testdata/config.yaml
+++ b/receiver/sqlserverreceiver/internal/metadata/testdata/config.yaml
@@ -7,7 +7,17 @@ all_set:
       enabled: true
     sqlserver.batch.sql_recompilation.rate:
       enabled: true
+    sqlserver.database.io.read_bytes:
+      enabled: true
     sqlserver.database.io.read_latency:
+      enabled: true
+    sqlserver.database.io.reads:
+      enabled: true
+    sqlserver.database.io.write_bytes:
+      enabled: true
+    sqlserver.database.io.write_latency:
+      enabled: true
+    sqlserver.database.io.writes:
       enabled: true
     sqlserver.lock.wait.rate:
       enabled: true
@@ -58,7 +68,17 @@ none_set:
       enabled: false
     sqlserver.batch.sql_recompilation.rate:
       enabled: false
+    sqlserver.database.io.read_bytes:
+      enabled: false
     sqlserver.database.io.read_latency:
+      enabled: false
+    sqlserver.database.io.reads:
+      enabled: false
+    sqlserver.database.io.write_bytes:
+      enabled: false
+    sqlserver.database.io.write_latency:
+      enabled: false
+    sqlserver.database.io.writes:
       enabled: false
     sqlserver.lock.wait.rate:
       enabled: false
